feat(test):Feature and unit test for services and repositories
