# routes/api.php
@@ -10,8 +10,8 @@ use Illuminate\Support\Facades\Route;
 
 Route::post('register', [AuthController::class, 'register']);
 Route::post('login', [AuthController::class, 'login']);
-Route::post('resetPassword', [AuthController::class, 'resetPassword']);
-Route::post('savePassword', [AuthController::class, 'savePassword']);
+Route::post('password/reset', [AuthController::class, 'resetPassword']);
+Route::post('password/update', [AuthController::class, 'savePassword']);
 Route::post('logout', [AuthController::class, 'logout']);
 
 Route::middleware(['auth:sanctum'])->group(function () {
