# storage/api-docs/api-docs.json
@@ -244,7 +244,7 @@
                 }
             }
         },
-        "/api/v1/resetPassword": {
+        "/api/v1/password/reset": {
             "post": {
                 "tags": [
                     "Auth"
@@ -293,7 +293,7 @@
                 }
             }
         },
-        "/api/v1/savePassword": {
+        "/api/v1/password/update": {
             "post": {
                 "tags": [
                     "Auth"
